; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/gdi32/extr_metafile.c_rgn_rect_count.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/gdi32/extr_metafile.c_rgn_rect_count.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { %struct.TYPE_6__ }
%struct.TYPE_6__ = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32)* @rgn_rect_count to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @rgn_rect_count(i32 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  %5 = alloca %struct.TYPE_7__*, align 8
  store i32 %0, i32* %3, align 4
  %6 = load i32, i32* %3, align 4
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %9, label %8

8:                                                ; preds = %1
  store i64 0, i64* %2, align 8
  br label %33

9:                                                ; preds = %1
  %10 = load i32, i32* %3, align 4
  %11 = call i64 @GetRegionData(i32 %10, i64 0, %struct.TYPE_7__* null)
  store i64 %11, i64* %4, align 8
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %14, label %13

13:                                               ; preds = %9
  store i64 0, i64* %2, align 8
  br label %33

14:                                               ; preds = %9
  %15 = call i32 (...) @GetProcessHeap()
  %16 = load i64, i64* %4, align 8
  %17 = call %struct.TYPE_7__* @HeapAlloc(i32 %15, i32 0, i64 %16)
  store %struct.TYPE_7__* %17, %struct.TYPE_7__** %5, align 8
  %18 = icmp ne %struct.TYPE_7__* %17, null
  br i1 %18, label %20, label %19

19:                                               ; preds = %14
  store i64 0, i64* %2, align 8
  br label %33

20:                                               ; preds = %14
  %21 = load i32, i32* %3, align 4
  %22 = load i64, i64* %4, align 8
  %23 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %24 = call i64 @GetRegionData(i32 %21, i64 %22, %struct.TYPE_7__* %23)
  %25 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %26 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %25, i32 0, i32 0
  %27 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %26, i32 0, i32 0
  %28 = load i64, i64* %27, align 8
  store i64 %28, i64* %4, align 8
  %29 = call i32 (...) @GetProcessHeap()
  %30 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %31 = call i32 @HeapFree(i32 %29, i32 0, %struct.TYPE_7__* %30)
  %32 = load i64, i64* %4, align 8
  store i64 %32, i64* %2, align 8
  br label %33

33:                                               ; preds = %20, %19, %13, %8
  %34 = load i64, i64* %2, align 8
  ret i64 %34
}

declare dso_local i64 @GetRegionData(i32, i64, %struct.TYPE_7__*) #1

declare dso_local %struct.TYPE_7__* @HeapAlloc(i32, i32, i64) #1

declare dso_local i32 @GetProcessHeap(...) #1

declare dso_local i32 @HeapFree(i32, i32, %struct.TYPE_7__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
